@@ -877,6 +877,7 @@ function elgg_upload_files($filedata,$dbc=true){
 				// chmod($file_fullpath, $CFG->filepermissions);
 				$success=true;
 				}
+
 			else{trigger_error('Could not move file to eportfolio: '.$file_fullpath,E_USER_WARNING);}
 			}
 
@@ -1253,7 +1254,7 @@ function list_files($epfun,$foldertype,$linkedid='-1',$bid=''){
 	$epfuid=get_epfuid($epfun,$folder_usertype);
 	if(strlen($epfuid)<2){$epfuid='-999999';}
 
-	if($foldertype=='report' or $foldertype=='icon'){
+	if($foldertype=='reporttt' or $foldertype=='icon'){
 		/* Just involves listing the directory contents */
 		if($foldertype=='report'){
 			$foldername='files';
