@@ -3,6 +3,8 @@ Version ClaSS-1.0.52 release (2013/08/30)
 
 Changed the statistics page to breakdown nationalities by section.
 
+Added document drop for reports... needs more testing.
+
 
 
 Version ClaSS-1.0.51 release (2013/06/30)
